--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@ author.
             <hr id="mobile-nav-hr">
         </header>
     
-        <div id="about">
-            <p>Paragraph test.</p>
+        <div id="main-content">
+            <div id="about">
+                <h2>About</h2>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In ornare quam viverra orci. Eros donec ac odio tempor orci. Morbi tincidunt augue interdum velit euismod in pellentesque massa placerat. In mollis nunc sed id semper risus in hendrerit gravida. Amet cursus sit amet dictum sit amet justo. Dictum at tempor commodo ullamcorper a lacus. Velit laoreet id donec ultrices tincidunt arcu non sodales. Massa massa ultricies mi quis hendrerit dolor. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Ut faucibus pulvinar elementum integer enim neque volutpat. Varius duis at consectetur lorem donec massa sapien. Ultricies mi eget mauris pharetra et ultrices neque ornare aenean. Sed viverra tellus in hac habitasse.</p>
+                </div>
+                <div>
+                    <p>Mauris cursus mattis molestie a iaculis at erat pellentesque. Placerat vestibulum lectus mauris ultrices eros in. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Consequat semper viverra nam libero justo laoreet sit. Eu facilisis sed odio morbi quis commodo odio aenean. Sed turpis tincidunt id aliquet risus feugiat in. Laoreet suspendisse interdum consectetur libero id. Risus nec feugiat in fermentum posuere. Lacus sed viverra tellus in hac habitasse platea. Amet cursus sit amet dictum sit amet justo donec enim. Convallis tellus id interdum velit laoreet id. Posuere morbi leo urna molestie at elementum eu facilisis sed. Nulla aliquet enim tortor at auctor. Faucibus vitae aliquet nec ullamcorper sit. Odio ut enim blandit volutpat maecenas. Porta lorem mollis aliquam ut porttitor. Id cursus metus aliquam eleifend mi in. At auctor urna nunc id cursus metus aliquam eleifend mi. Vehicula ipsum a arcu cursus vitae. Augue eget arcu dictum varius duis at.</p>
+                </div>
+            </div>
         </div>
     
     </body>
