Attempting to disable cache temporarily

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ author.
         <link rel="icon" href="img/maybe.svg">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Stylesheets-->
-        <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="css/global.css?<?php echo filemtime('mycss.css') ?>">
         <!--Scripts-->
     </head>
     
@@ -42,11 +42,13 @@ author.
                 <h2>About</h2>
                 <div>
                     <p>This is a minimalistic website template designed and created by Christopher Bell, CEO and Founder of Hex Studios. It is free to use and modify, but not to distribute as your own work (Standard CC Licence).</p>
-                    <span><img src="img/leftarrow.svg" alt="icon"><br>Description.</span>
-                    <span><img src="img/rightarrow.svg" alt="icon"><br>Description.</span>
+                    <span><a href="#"><img src="img/leftarrow.svg" alt="icon"></a><br>Description.</span>
+                    <span><a href="#"><img src="img/rightarrow.svg" alt="icon"></a><br>Description.</span>
                 </div>
                 <div>
-                    <p></p>
+                    <p>With white text on an off grey background, a beautiful monospace font, and simple design decisions, this website is a perfect discration free template to build your website, blog, store, or anything on!</p>
+                    <span><a href=""><img src="img/uparrow.svg" alt="icon"></a><br>Description.</span>
+                    <span><a href=""><img src="img/downarrow.svg" alt="icon"></a><br>Description.</span>
                 </div>
             </div>
         </div>
